--- a/js/templates/applicationinsertform.handlebars
+++ b/js/templates/applicationinsertform.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-sm-6">  
-		<form class="form-horizontal" id="formaddcontact">
+		<form class="form-horizontal" id="formaddapplication">
 		  <fieldset>
 		    <div class="form-group">
 		      <label for="name" class="col-lg-3 control-label">SuperHero Name</label>
@@ -8,33 +8,36 @@
 		        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
 		      </div>
 		    </div>
+
 		    <div class="form-group">
 		      <label for="email" class="col-lg-3 control-label">Cape</label>
-		      <div class="col-lg-9">
+		        <div class="col-lg-9">
 		         <input type="radio" name="cape" id="cape" value="Yes"> Yes<br>
-						<input type="radio" name="cape" id="cape" value="No"> No<br>
-		      </div>
-		    </div>
-		    <div class="form-group">
-		      <label for="mobileno" class="col-lg-3 control-label">Mask</label>
-		      <div class="col-lg-9">
-		        <input type="radio" name="mask" id="mask" value="Yes"> Yes<br>
-						<input type="radio" name="mask" id="mask" value="No"> No<br>
-		      </div>
-		    </div>
-  <div class="form-group">
-		      <label for="mobileno" class="col-lg-3 control-label">Costume</label>
-		      <div class="col-lg-9">
-		         <input type="radio" name="costume" id="costume" value="Yes"> Yes<br>
-						<input type="radio" name="costume" id="costume" value="No"> No<br>
-		      </div>
+                 <input type="radio" name="cape" id="cape" value="No"> No<br>
+		        </div>
 		    </div>
 
-				<div class="form-group">
+		    <div class="form-group">
+		      <label for="mobileno" class="col-lg-3 control-label">Mask</label>
+		        <div class="col-lg-9">
+		        <input type="radio" name="mask" id="mask" value="Yes"> Yes<br>
+				<input type="radio" name="mask" id="mask" value="No"> No<br>
+		        </div>
+		    </div>
+
+            <div class="form-group">
+		      <label for="mobileno" class="col-lg-3 control-label">Costume</label>
+		        <div class="col-lg-9">
+		         <input type="radio" name="costume" id="costume" value="Yes"> Yes<br>
+				 <input type="radio" name="costume" id="costume" value="No"> No<br>
+		        </div>
+            </div>
+
+			<div class="form-group">
 		      <label for="mobileno" class="col-lg-3 control-label">SuperPower</label>
-		      <div class="col-lg-9">
-		        <input type="text" class="form-control" id="Superpower" placeholder="Your Superpower" required>
-		      </div>
+		        <div class="col-lg-9">
+		        <input type="text" class="form-control" id="superpower" placeholder="Your Superpower" required>
+		        </div>
 		    </div>
 
 		    <div class="form-group">
