--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-sm-12">
-      <a class="btn btn-primary" href="#contacts/addapplication" role="button">Add Application</a> 
+      <a class="btn btn-primary" href="#application/addapplication" role="button">Add Application</a> 
      
       <p>&nbsp;</p>  
       <table class="table table-striped table-hover table-condensed" id="tbl1">
