--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-sm-12">
-      <a class="btn btn-primary" href="#application/addapplication" role="button">Add Application</a> 
+      <a class="btn btn-primary" href="#applications/addapplication" role="button">Add Application</a> 
      
       <p>&nbsp;</p>  
       <table class="table table-striped table-hover table-condensed" id="tbl1">
@@ -21,12 +21,12 @@
 {{#each contacts}}
             <tr>
                <td class='index-column'>{{ id }}</td>
-               <td><a href="#contacts/view/{{id}}">{{name}}</a></td>
-               <td>{{ mobileno }}</td>
-               <td>{{ email }}</td>
-               <td>{{photo}}</td>
-               <td>{{ownerlogin}}</td>
-               
+               <td><a href="#applications/view/{{id}}">{{name}}</a></td>
+               <td>{{ name }}</td>
+               <td>{{ mask }}</td>
+               <td>{{Cape}}</td>
+               <td>{{costume}}</td>
+               <td>{{superpower}}</td>
                <td><span class="label label-primary">{{ addeddate }}</span></td>
                <td>{{status}}</td>
                <td>
