--- a/js/templates/applicationviewform.handlebars
+++ b/js/templates/applicationviewform.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-sm-6">  
-		<form class="form-horizontal" id="formupdatecontact">
+		<form class="form-horizontal" id="formupdateapplication">
 		  <fieldset>
 		    <div class="form-group">
 		      <label for="name" class="col-lg-3 control-label">Name</label>
@@ -22,7 +22,7 @@
 		    </div>
 		    <div class="form-group">
 		      <div class="col-lg-9 col-lg-offset-3">
-		      	<input type="hidden" id="contactid" value="{{ id }}">
+		      	<input type="hidden" id="applicationsid" value="{{ id }}">
 		      	<a href="#contacts" class="btn btn-danger">Back</a>
 		        <button type="reset" class="btn btn-default">Reset</button>
 		        <button type="submit" class="btn btn-primary">Submit</button>
