--- a/js/templates/applicationinsertform.handlebars
+++ b/js/templates/applicationinsertform.handlebars
@@ -9,32 +9,52 @@
 		      </div>
 		    </div>
 
-		    <div class="form-group">
+		    {{!-- <div class="form-group">
 		      <label for="email" class="col-lg-3 control-label">Cape</label>
 		        <div class="col-lg-9">
 		         <input type="radio" name="cape" id="cape" value="Yes"> Yes<br>
                  <input type="radio" name="cape" id="cape" value="No"> No<br>
 		        </div>
+		    </div> --}}
+
+ <div class="form-group">
+		      <label for="mask" class="col-lg-3 control-label">SuperHero Name</label>
+		      <div class="col-lg-9">
+		        <input type="text" class="form-control" id="cape" placeholder="Your Name" required>
+		      </div>
+		    </div>
+ <div class="form-group">
+		      <label for="mask" class="col-lg-3 control-label">SuperHero Name</label>
+		      <div class="col-lg-9">
+		        <input type="text" class="form-control" id="mask" placeholder="Your Name" required>
+		      </div>
 		    </div>
 
-		    <div class="form-group">
+				 <div class="form-group">
+		      <label for="costume" class="col-lg-3 control-label">SuperHero Name</label>
+		      <div class="col-lg-9">
+		        <input type="text" class="form-control" id="costume" placeholder="Your Name" required>
+		      </div>
+		    </div>
+
+		    {{!-- <div class="form-group">
 		      <label for="mobileno" class="col-lg-3 control-label">Mask</label>
 		        <div class="col-lg-9">
 		        <input type="radio" name="mask" id="mask" value="Yes"> Yes<br>
 				<input type="radio" name="mask" id="mask" value="No"> No<br>
 		        </div>
-		    </div>
+		    </div> --}}
 
-            <div class="form-group">
+            {{!-- <div class="form-group">
 		      <label for="mobileno" class="col-lg-3 control-label">Costume</label>
 		        <div class="col-lg-9">
 		         <input type="radio" name="costume" id="costume" value="Yes"> Yes<br>
 				 <input type="radio" name="costume" id="costume" value="No"> No<br>
 		        </div>
-            </div>
+            </div> --}}
 
 			<div class="form-group">
-		      <label for="mobileno" class="col-lg-3 control-label">SuperPower</label>
+		      <label for="superpower" class="col-lg-3 control-label">SuperPower</label>
 		        <div class="col-lg-9">
 		        <input type="text" class="form-control" id="superpower" placeholder="Your Superpower" required>
 		        </div>
