--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -27,11 +27,11 @@
                <td>{{costume}}</td>
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
-               <td>{{status}}</td>
+           <td>{{{displaystats stats}}}</td>
                <td>
                   <a href="javascript:;">
                      {{!-- <i class="far fa-trash-alt"></i> --}}
-                  <i class="fa fa-trash" aria-hidden="true"  data-contactid="{{ id }}"></i>
+                  <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i>
                      {{!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" data-contactid="{{ id }}"></span> --}}
          {{/each}} 
          </tbody>
