finish up the CRUD
1.CRUD done except Update
2.front end done
3.ownerlogin recorded

--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -27,7 +27,7 @@
                <td>{{costume}}</td>
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
-           <td>{{{displaystats stats}}}</td>
+           <td>{{{displayverify verify}}}</td>
                <td>
                   <a href="javascript:;">
                      {{!-- <i class="far fa-trash-alt"></i> --}}
