added roles seperation function
done

--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -28,10 +28,12 @@
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
            <td>{{{displayverify verify}}}</td>
-               <td>
-                  <a href="javascript:;">
+                <td>{{{roleschecker roles}}}<td>
+                 
+                  {{!-- <a href="javascript:;">
                      {{!-- <i class="far fa-trash-alt"></i> --}}
-                  <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i>
+                  {{!-- <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i> --}}
+                  
                      {{!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" data-contactid="{{ id }}"></span> --}}
          {{/each}} 
          </tbody>
