--- a/js/templates/applicationviewform.handlebars
+++ b/js/templates/applicationviewform.handlebars
@@ -3,26 +3,43 @@
 		<form class="form-horizontal" id="formupdateapplication">
 		  <fieldset>
 		    <div class="form-group">
-		      <label for="name" class="col-lg-3 control-label">Name</label>
+		      <label for="name" class="col-lg-3 control-label">SuperHero Name</label>
 		      <div class="col-lg-9">
-		        <input type="text" class="form-control" id="name" value="{{ name }}" required>
+		        <input type="text" class="form-control" id="name" value='{{name}}'  required>
 		      </div>
 		    </div>
 		    <div class="form-group">
-		      <label for="email" class="col-lg-3 control-label">Email</label>
+		      <label for="email" class="col-lg-3 control-label">Cape</label>
 		      <div class="col-lg-9">
-		        <input type="email" class="form-control" id="email" value="{{ email }}" required>
+		         <input type="radio" name="cape" id="cape" value="Yes"> Yes<br>
+						<input type="radio" name="cape" id="cape" value="No"> No<br>
 		      </div>
 		    </div>
 		    <div class="form-group">
-		      <label for="mobileno" class="col-lg-3 control-label">Mobile No</label>
+		      <label for="mobileno" class="col-lg-3 control-label">Mask</label>
 		      <div class="col-lg-9">
-		        <input type="text" class="form-control" id="mobileno" value="{{ mobileno }}" required>
+		        <input type="radio" name="mask" id="mask" value="Yes"> Yes<br>
+						<input type="radio" name="mask" id="mask" value="No"> No<br>
 		      </div>
 		    </div>
+  <div class="form-group">
+		      <label for="mobileno" class="col-lg-3 control-label">Costume</label>
+		      <div class="col-lg-9">
+		         <input type="radio" name="costume" id="costume" value="Yes"> Yes<br>
+						<input type="radio" name="costume" id="costume" value="No"> No<br>
+		      </div>
+		    </div>
+
+				<div class="form-group">
+		      <label for="mobileno" class="col-lg-3 control-label">SuperPower</label>
+		      <div class="col-lg-9">
+		        <input type="text" class="form-control" id="Superpower" placeholder="Your Superpower" value='{{superpower}}' required>
+		      </div>
+		    </div>
+
 		    <div class="form-group">
 		      <div class="col-lg-9 col-lg-offset-3">
-		      	<input type="hidden" id="applicationsid" value="{{ id }}">
+		      	<input type="hidden" id="applicationid" value="{{ id }}">
 		      	<a href="#contacts" class="btn btn-danger">Back</a>
 		        <button type="reset" class="btn btn-default">Reset</button>
 		        <button type="submit" class="btn btn-primary">Submit</button>
