--- a/js/templates/admin.handlebars
+++ b/js/templates/admin.handlebars
@@ -8,8 +8,8 @@
             <tr>
                <th>Index</th>
                <th>Superhero Name</th>
-               <th>Mask</th>
                <th>Cape</th>
+               <th>Mask</th>
                <th>Costume</th>
                <th>Superhero Power</th>
                <th>Added</th>
@@ -28,10 +28,10 @@
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
            <td>{{{displayverify verify}}}</td>
-                 
-                <td><a href="javascript:;">
-                     {{!-- <i class="far fa-trash-alt"></i> --}}
-                  <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i></td>
+
+               <td> <a href="javascript:;">
+                  <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i>
+                  
                      {{!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" data-contactid="{{ id }}"></span> --}}
          {{/each}} 
          </tbody>
