--- a/js/templates/admin.handlebars
+++ b/js/templates/admin.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-sm-12">
-      <a class="btn btn-primary" href="#applications/addapplication" role="button">Add Application</a> 
+      {{!-- <a class="btn btn-primary" href="#applications/addapplication" role="button">Add Application</a>  --}}
      
       <p>&nbsp;</p>  
       <table class="table table-striped table-hover table-condensed" id="tbl1">
@@ -27,12 +27,16 @@
                <td>{{costume}}</td>
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
-           <td>{{{displayverify verify}}}</td>
+           <td>{{{displayverify verify}}}
+                <a href="javascript:;">
+                  <i class="fa fa-times" aria-hidden="true"  data-verifyid="{{ id }}"></i>
+           </td>
+
 
                <td> <a href="javascript:;">
                   <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i>
                   
-                     {{!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" data-contactid="{{ id }}"></span> --}}
+                     
          {{/each}} 
          </tbody>
       </table>
