--- a/js/templates/applicationinsertform.handlebars
+++ b/js/templates/applicationinsertform.handlebars
@@ -44,7 +44,7 @@
 
 		    <div class="form-group">
 		      <div class="col-lg-9 col-lg-offset-3">
-		      	<a href="#contacts" class="btn btn-danger">Back</a>
+		      	<a href="#applications" class="btn btn-danger">Back</a>
 		        <button type="reset" class="btn btn-default">Reset</button>
 		        <button type="submit" class="btn btn-primary">Submit</button>
 		      </div>
