--- a/js/templates/applicationviewform.handlebars
+++ b/js/templates/applicationviewform.handlebars
@@ -11,7 +11,7 @@
 		    <div class="form-group">
 		      <label for="email" class="col-lg-3 control-label">Cape</label>
 		      <div class="col-lg-9">
-		         <input type="radio" name="cape" id="cape" value="Yes"> Yes<br>
+		         <input type="radio" name="cape" id="cape"value="Yes"> Yes<br>
 						<input type="radio" name="cape" id="cape" value="No"> No<br>
 		      </div>
 		    </div>
@@ -33,14 +33,14 @@
 				<div class="form-group">
 		      <label for="mobileno" class="col-lg-3 control-label">SuperPower</label>
 		      <div class="col-lg-9">
-		        <input type="text" class="form-control" id="Superpower" placeholder="Your Superpower" value='{{superpower}}' required>
+		        <input type="text" class="form-control" id="superpower" placeholder="Your Superpower" value='{{superpower}}' required>
 		      </div>
 		    </div>
 
 		    <div class="form-group">
 		      <div class="col-lg-9 col-lg-offset-3">
 		      	<input type="hidden" id="applicationid" value="{{ id }}">
-		      	<a href="#contacts" class="btn btn-danger">Back</a>
+		      	<a href="#applications" class="btn btn-danger">Back</a>
 		        <button type="reset" class="btn btn-default">Reset</button>
 		        <button type="submit" class="btn btn-primary">Submit</button>
 		      </div>
