--- a/js/templates/admin.handlebars
+++ b/js/templates/admin.handlebars
@@ -21,21 +21,22 @@
 {{#each applications}}
             <tr>
                <td class='index-column'>{{ id }}</td>
-               <td><a href="#applications/view/{{id}}">{{name}}</a></td>
+               <td>{{name}}</td>
                <td>{{cape}}</td>
                <td>{{mask}}</td>
                <td>{{costume}}</td>
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
-           <td>{{{displayverify verify}}} 
-                <a href="javascript:;">
-                  <i class="fa fa-check " aria-hidden="true"  data-verifyid="{{ id }}"></i></td>
+           <td>{{{displayverify verify}}}
+            <a href="javascript:;"></a>
+            <i class="fa fa-check" aria-hidden="true"  data-verifyid="{{ id }}"></i></a></td> 
           
 
 
-               <td> <a href="javascript:;">
-                  <i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i></a></td>
-                  
+               <td> <a href="javascript:;"></a>
+                  {{!-- <span><i class="fa fa-trash" aria-hidden="true"  data-applicationid="{{ id }}"></i></span> --}}
+         <span class="glyphicon glyphicon-trash" aria-hidden="true" data-applicationid="{{ id }}"></span> 
+                  </a></td>
                      
          {{/each}} 
          </tbody>
