--- a/js/templates/applications.handlebars
+++ b/js/templates/applications.handlebars
@@ -3,7 +3,7 @@
       <a class="btn btn-primary" href="#applications/addapplication" role="button">Add Application</a> 
      
       <p>&nbsp;</p>  
-      <table class="table table-striped table-hover table-condensed" id="tbl1">
+      <table class="table table-striped table-hover table-condensed" id="tbl2">
          <thead>
             <tr>
                <th>Index</th>
@@ -27,7 +27,7 @@
                <td>{{costume}}</td>
                <td>{{superpower}}</td>
                <td><span class="label label-info">{{ addeddate }}</span></td>
-           <td>{{{displayverify verify}}}</td>
+           <td>{{{displayverifyuser verify}}}</td>
                  
                 {{!-- <td><a href="javascript:;"> --}}
                   
